2006-10-31  Akim Demaille  <demaille@gostai.com>

	Extend URBI_FLOAT
	* urbi-ufloat.m4: Support 5 supports, tabulated or not.

2006-10-31  Akim Demaille  <demaille@gostai.com>

	rebox.el
	* rebox.el: New.
	* README: Adjust.

2006-10-31  Akim Demaille  <demaille@gostai.com>

	Reindent
	* reindent: New.
	* README: Update.

2006-10-31  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Handle multiple extensions properly.
	* autotroll.mk: Here.

2006-10-27  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Don't skip empty files when generating reference outputs.
	* test.sh: Because it might be confusing and because it might leads to
          dist problems (eg: EXTRA_DIST = $(TESTS:.test=.stdout) will make
          "make dist" fail because a .stdout is missing because it was empty).

2006-10-26  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Add the generic test suite in build-aux.
        This way it's usable easily throughout different projects.
	* tests/test.sh: Move to...
	* build-aux/test.sh: ... here.

2006-10-26  Akim Demaille  <demaille@gostai.com>

	Typo
	* urbi-openr.m4 (OPENR_SDK_PATH): OPEN_R_SDK.
	Reported by Matthieu.

2006-10-25  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Try to enforce release mode when build fails.
	* autotroll.m4: When the sample Qt app built by AutoTroll fails to
          compile, it might be because qmake (erroneously) enforces debugging
          support (eg by adding -lQtXml_debug in the LIBS) whereas no
          debugging support was installed with Qt (which is the default on
          Debian for instance). In this case, AutoTroll tries to enforce
          CONFIG += release.

2006-10-24  Akim Demaille  <demaille@gostai.com>

	Typo
	* urbi-ufloat.m4: Fix it.

2006-10-24  Akim Demaille  <demaille@gostai.com>

	URBI_FLOAT
	* urbi-ufloat.m4: New.

2006-10-24  Akim Demaille  <demaille@gostai.com>

	More OPENR vars
	* urbi-openr.m4 (OPEN_R_LDFLAGS): New.

2006-10-24  Akim Demaille  <demaille@gostai.com>
