@@ -1,5 +1,17 @@
 EXTRA_DIST = $(top_srcdir)/build-aux/install-sh-c
 
+SVN = svn-wrapper.sh
+
+## ------ ##
+## Help.  ##
+## ------ ##
+
+.PHONY: help help-first
+
+help: help-first
+help-first:
+	@echo "Some make targets:"
+
 
 ## --------- ##
 ## recheck.  ##
@@ -7,7 +19,11 @@ EXTRA_DIST = $(top_srcdir)/build-aux/install-sh-c
 
 # It is often helpful to rerun configure (well, config.status).
 # This is a convenient shorthand.
-.PHONY: recheck
+.PHONY: recheck recheck-help
+help: recheck-help
+recheck-help:
+	@echo "recheck:  rerun config.status"
+
 recheck:
 	cd $(top_builddir) && ./config.status --recheck
 	cd $(top_builddir) && ./config.status
@@ -18,19 +34,26 @@ recheck:
 ## Build-aux.  ##
 ## ----------- ##
 
-.PHONY: baux-up baux-ci baux-pin
+.PHONY: baux-help baux-up baux-ci baux-pin
+.PHONY: build-aux-help build-aux-up build-aux-ci build-aux-pin
+
+help: baux-help
+baux-help build-aux-help:
+	@echo "baux-up:    update the dependencies on build-aux"
+	@echo "baux-ci:    checkin build-aux, and upgrade dependency"
+	@echo "baux-pin:   subscribe to build-aux"
 
 # Update a pinned svn:externals.
-baux-up:
+baux-up build-aux-up:
 	cd $(top_srcdir) && build-aux/svn-externals --update=build-aux
 
 # Check in a pinned external from a host project, and depend upon it.
-baux-ci:
-	cd $(top_srcdir)/build-aux && vcs-svn ci
+baux-ci build-aux-ci:
+	cd $(top_srcdir)/build-aux && $(SVN) ci
 	$(MAKE) $(AM_MAKEFLAGS) baux-up
 
 # Pin the svn:external by subscribing to it.
-baux-pin:
+baux-pin build-aux-pin:
 	cd $(top_srcdir) && build-aux/svn-externals --subscribe=baux
 
 
@@ -38,7 +61,12 @@ baux-pin:
 ## libport.  ##
 ## --------- ##
 
-.PHONY: libport-up libport-ci libport-pin
+.PHONY: libport-help libport-up libport-ci libport-pin
+help: libport-help
+libport-help:
+	@echo "libport-up:    same as baux-up, but for libport"
+	@echo "libport-ci:    likewise"
+	@echo "libport-pin:   likewise"
 
 # Update a pinned svn:externals.
 libport-up:
@@ -46,9 +74,24 @@ libport-up:
 
 # Check in a pinned external from a host project, and depend upon it.
 libport-ci:
-	cd $(top_srcdir)/libport && vcs-svn ci
+	cd $(top_srcdir)/libport && $(SVN) ci
 	$(MAKE) $(AM_MAKEFLAGS) libport-up
 
 # Pin the svn:external by subscribing to it.
 libport-pin:
 	cd $(top_srcdir) && build-aux/svn-externals --subscribe=libport
+
+
+## ----- ##
+## All.  ##
+## ----- ##
+
+.PHONY: all-up-help all-up
+
+help: all-up-help
+all-up-help:
+	@echo "all-up:    update all the svn:externals dependencies"
+
+# Update a pinned svn:externals.
+all-up:
+	cd $(top_srcdir) && build-aux/svn-externals --update-all
